# steam-game-descriptor

./: .env.dev  .env.prod  .gcloudignore  .gitignore  Procfile  README.md  app.yaml  cron.yaml  demo.py  infra.md  main.py  overview.drawio  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  setup_gcs_models.py  vars.dev.env  vars.prod.env
.github/workflows/: deploy.yml
app/: __init__.py  cli.py  create_image.py  data_files.py  generate_description.py  model_specs.py  nltk_pos_tag_download.py  parser.py  setup_gcs_models.py  utils.py  views.py
app/data/: developers.txt  genres.yml  pos_tags.json  seeds.json  taglines.txt  tags.txt  titles.txt
app/generator/: generator.py  trainer.py
app/static/: style.css
app/templates/: index.html
app/tools/: get_model_stats.py  nltk_pos_tag_download.py
app/utils/: common.py  data_files.py  gcs.py  verify_oidc.py
data/: developers.txt  features.txt  genres.yml  seeds.json  seeds.txt  taglines.txt
src/: __init__.py  create_image.py  data_files.py  generate_description.py  json_set_encoder.py  nltk_pos_tag_download.py  parser.py  setup_gcs_models.py  utils.py
src/generator/: generator.py  trainer.py
static/: style.css
templates/: index.html
test/: test_generate_description.py  test_generator.py  test_parser.py  test_trainer.py  test_utils.py
tests/: description_schema.json  test_generate_description.py  test_generator.py  test_parser.py  test_trainer.py  test_utils.py
utils/: tasks.py
